force-app/main/default/objects/Installation_Change__c/Installation_Change__c.object-meta.xml
<CustomObject>
    <label>Installation Change</label>
    <pluralLabel>Installation Changes</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Installation Change Number</label>
        <displayFormat>IC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>