force-app/main/default/objects/Installation_Change__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Lookup</type>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Installation_Changes_Contract</relationshipName>
    <relationshipLabel>Installation Changes (Contract)</relationshipLabel>
</CustomField>