force-app/main/default/objects/Installation_Change__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <type>MasterDetail</type>
    <referenceTo>Installation__c</referenceTo>
    <relationshipName>Installation_Changes</relationshipName>
    <relationshipLabel>Installation Changes</relationshipLabel>
</CustomField>