force-app/main/default/objects/Installation_Change__c/fields/New_Contract__c.field-meta.xml
<CustomField>
    <fullName>New_Contract__c</fullName>
    <label>New Contract</label>
    <type>Lookup</type>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Installation_Changes_NewContract</relationshipName>
    <relationshipLabel>Installation Changes (New Contract)</relationshipLabel>
</CustomField>