force-app/main/default/objects/Installation_Change__c/fields/New_Package__c.field-meta.xml
<CustomField>
    <fullName>New_Package__c</fullName>
    <label>New Package</label>
    <type>Lookup</type>
    <referenceTo>Package__c</referenceTo>
    <relationshipName>Installation_Changes_NewPackage</relationshipName>
    <relationshipLabel>Installation Changes (New Package)</relationshipLabel>
</CustomField>