force-app/main/default/objects/Installation_Change__c/fields/New_Quote__c.field-meta.xml
<CustomField>
    <fullName>New_Quote__c</fullName>
    <label>New Quote</label>
    <type>Lookup</type>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Installation_Changes_NewQuote</relationshipName>
    <relationshipLabel>Installation Changes (New Quote)</relationshipLabel>
</CustomField>