force-app/main/default/objects/Installation_Change__c/fields/Old_Contract__c.field-meta.xml
<CustomField>
    <fullName>Old_Contract__c</fullName>
    <label>Old Contract</label>
    <type>Lookup</type>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Installation_Changes_OldContract</relationshipName>
    <relationshipLabel>Installation Changes (Old Contract)</relationshipLabel>
</CustomField>