force-app/main/default/objects/Installation_Change__c/fields/Old_Package__c.field-meta.xml
<CustomField>
    <fullName>Old_Package__c</fullName>
    <label>Old Package</label>
    <type>Lookup</type>
    <referenceTo>Package__c</referenceTo>
    <relationshipName>Installation_Changes_OldPackage</relationshipName>
    <relationshipLabel>Installation Changes (Old Package)</relationshipLabel>
</CustomField>