force-app/main/default/objects/Installation_Change__c/fields/Old_Quote__c.field-meta.xml
<CustomField>
    <fullName>Old_Quote__c</fullName>
    <label>Old Quote</label>
    <type>Lookup</type>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Installation_Changes_OldQuote</relationshipName>
    <relationshipLabel>Installation Changes (Old Quote)</relationshipLabel>
</CustomField>