force-app/main/default/objects/Installation_Change__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Installation_Changes_Opportunity</relationshipName>
    <relationshipLabel>Installation Changes (Opportunity)</relationshipLabel>
</CustomField>