force-app/main/default/objects/Installation_Change__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipName>Installation_Changes_Order</relationshipName>
    <relationshipLabel>Installation Changes (Order)</relationshipLabel>
</CustomField>