force-app/main/default/objects/Installation_Change__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <type>Lookup</type>
    <referenceTo>Package__c</referenceTo>
    <relationshipName>Installation_Changes_Package</relationshipName>
    <relationshipLabel>Installation Changes (Package)</relationshipLabel>
</CustomField>