force-app/main/default/objects/Installation_Change__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <type>Lookup</type>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipName>Installation_Changes_Quote</relationshipName>
    <relationshipLabel>Installation Changes (Quote)</relationshipLabel>
</CustomField>