force-app/main/default/objects/Installation_Change__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <label>Quote Line Group</label>
    <type>Lookup</type>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipName>Installation_Changes_QLG</relationshipName>
    <relationshipLabel>Installation Changes (Quote Line Group)</relationshipLabel>
</CustomField>